--- a/templates/lost/home.html
+++ b/templates/lost/home.html
@@ -1,1 +1,11 @@
-<h1>Hi There again!</h1>
+<h1> {{ title }} </h1>
+
+<form method="POST" action="">
+
+{% csrf_token %}
+
+{{ form.as_p }}
+
+<input type="submit" value="Add">
+	
+</form>
